<resources>
    <string name="app_name">Score Keeper</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="six_points">+6 points</string>
    <string name="three_points">+3 points</string>
    <string name="two_points">+2 points</string>
    <string name="one_point">+1 point</string>
    <string name="team_A">Team A</string>
    <string name="team_B">Team B</string>
    <string name="reset">reset</string>
    <string name="initial_score">0</string>
</resources>
