<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/team_A"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/initial_score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="scoreSixForTeamA"
                android:text="@string/six_points" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="scoreThreeForTeamA"
                android:text="@string/three_points" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="scoreTwoForTeamA"
                android:text="@string/two_points" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="scoreOneForTeamA"
                android:text="@string/one_point" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray">

        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/team_B"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/initial_score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="scoreSixForTeamB"
                android:text="@string/six_points" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="scoreThreeForTeamB"
                android:text="@string/three_points" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="scoreTwoForTeamB"
                android:text="@string/two_points" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="scoreOneForTeamB"
                android:text="@string/one_point" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:textAllCaps="true" />

</RelativeLayout>